# notion-recurring-tasks

./: .gitignore  .readthedocs.yml  LICENCE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docs/: demonstration.md  index.md
docs/explanation/: index.md
docs/how-to-guide/: index.md
docs/tutorial/: automating-the-software.md  build-from-source.md  getting-started.md  index.md  install-from-source.md
docs/tutorial/getting-started/: alternatives-to-download.md  index.md
scripts/: build_executable.py  gen_ref_pages.py
src/: README.md  dataprocessing.py  main.py  notion_api.py
src/notion_recurring_tasks/: dataprocessing.py  main.py
tests/: conftest.py
tests/functional/: test_script.py  test_setup.py
tests/unit/: test_dataprocessing.py  test_notion_api.py
